# fast-quizz-app

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 08ac70b0bb7e_add_user_id_to_quizzes.py  1f3c58594e3a_initial_migration.py  23ee47736b28_init_database.py  41683bc0cfc0_add_difficulty_and_image_url_to_quizzes.py  8730ca2c13c6_add_column_referece_id_to_identify_.py  a1c3f9d82e47_add_estimated_time_and_feedback_mode_to_quizzes.py  b9bd66e387c0_add_type_column_to_users_table.py  bf3b4863e394_create_results_and_answer_results.py  c4a6af98bf1d_merge_heads.py  da23795b1bbd_make_journey_id_from_quizz_model_to_.py
src/: main.py
src/api/: dependencies.py  schemas.py
src/api/routes/: __init__.py  auth.py  journeys.py  questions.py  quizzes.py  results.py  users.py
src/api/schemas/: __init__.py  auth.py  journeys.py  options.py  questions.py  quizzes.py  results.py  users.py
src/application/use_cases/: __init__.py  journey_use_cases.py  question_use_cases.py  quiz_use_cases.py  result_use_cases.py  user_use_cases.py
src/domain/entities/: __init__.py  journey.py  option.py  question.py  quiz.py  results.py  user.py
src/domain/enum/: user_type.py
src/domain/repositories/: __init__.py  journey_repository.py  (+4 more)
tests/: conftest.py
tests/integration/: conftest.py  test_auth_endpoints.py  test_journey_endpoints.py  test_question_endpoints.py  test_quiz_endpoints.py
(+17 files in other folders)
